# yunlink

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  todochecklist.md
.codex/: check-maxline.json
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
bindings/ffi/: README.md
bindings/js/: README.md
bindings/python/: CMakeLists.txt  pyproject.toml
bindings/python/src/: ffi_module.cpp
bindings/python/src/yunlink/: __init__.py
bindings/python/tests/: test_contracts.py  test_runtime_loop.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/yunlink/: Cargo.toml  build.rs
bindings/rust/yunlink-sys/: Cargo.toml  build.rs
bindings/rust/yunlink-sys/src/: lib.rs
bindings/rust/yunlink/examples/: air_roundtrip.rs  ground_recovery.rs  ground_roundtrip.rs
cmake/: SunrayComLibConfig.cmake.in  sunray_communication_libConfig.cmake.in  yunlinkConfig.cmake.in
compat/legacy_sunray/include/: DecoderInterfaceBase.h  LegacyCodec.h  MSG.h  MessageEnums.h
compat/legacy_sunray/src/: LegacyCodec.cpp
docs/: Doxyfile  README.md  core-refactor-maxline-taste-todolist.md
docs/bindings/: dual-host-lab-guide.md  network-profiles.md  overview.md  python-sdk.md  ros-sunray-bridge-overview.md  ros1-docker-ubuntu26-guide.md  rust-sdk.md  test-matrix.md  test-report-template.md  test-world-map.md  testing-todo-checklist.md
docs/diagrams/typst/: secure_envelope_frame.typ
docs/protocol/: README.md  implementation-status.md  integration-guide.md  migration-notes.md  scenario-walkthroughs.md  sunray-unified-protocol-spec.md  yunlink-protocol-spec.md
docs/superpowers/plans/: 2026-04-24-yunlink-rename.md
docs/superpowers/specs/: 2026-04-24-yunlink-rename-design.md
examples/cxx_air_roundtrip/: main.cpp
examples/cxx_ground_peer_recovery/: main.cpp
examples/discovery_udp/: main.cpp
examples/embedded_min_loop/: main.cpp
examples/smoke_local/: run_smoke_local.py
examples/tcp_command_client/: main.cpp
examples/telemetry_receiver/: main.cpp
examples/udp_tcp_bridge/: main.cpp
include/sunraycom/: sunraycom.hpp
include/sunraycom/c/: sunraycom_c.h
include/sunraycom/compat/: legacy_adapter.hpp  legacy_types.hpp
include/sunraycom/core/: envelope_stream_parser.hpp  event_bus.hpp  frame_stream_parser.hpp  message_ids.hpp  payload_mapper.hpp  protocol_codec.hpp  runtime_config.hpp  semantic_message_codec.hpp  semantic_message_traits.hpp  semantic_message_types.hpp  semantic_messages.hpp  types.hpp
include/sunraycom/runtime/: runtime.hpp
include/sunraycom/transport/: tcp_client_pool.hpp  tcp_server.hpp  udp_transport.hpp
include/yunlink/: yunlink.hpp
include/yunlink/c/: yunlink_c.h
include/yunlink/core/: envelope_stream_parser.hpp  event_bus.hpp  protocol_codec.hpp  runtime_config.hpp  semantic_message_codec.hpp  semantic_message_traits.hpp  semantic_message_types.hpp  semantic_messages.hpp  types.hpp
include/yunlink/runtime/: runtime.hpp
include/yunlink/transport/: tcp_client_pool.hpp  tcp_server.hpp  udp_transport.hpp
src/c/: sunraycom_c.cpp  yunlink_c.cpp
src/core/: envelope_stream_parser.cpp  event_bus.cpp  frame_stream_parser.cpp  legacy_adapter.cpp  protocol_codec.cpp  semantic_codec_io.hpp  semantic_messages_command.cpp  semantic_messages_session_authority.cpp  semantic_messages_state_bulk.cpp
src/runtime/: runtime.cpp  runtime_authority.cpp  runtime_command.cpp  runtime_core.cpp  runtime_internal.hpp  runtime_session.cpp  runtime_state.cpp  runtime_state_publish.cpp
src/transport/: socket_common.hpp  tcp_client_pool.cpp  tcp_server.cpp  tcp_stream_common.hpp  udp_transport.cpp
tests/: test_ci_regressions.py  test_compat_roundtrip.cpp  test_dev_tooling_config.cmake  test_docs_consistency.py  test_parser.cpp  test_protocol.cpp  test_runtime_control_paths.cpp  test_testing_tooling.py  test_transport_loop.cpp  test_uav_state_snapshots.cpp  test_udp_source_isolation.cpp
tests/bindings/: test_c_ffi_contract.cpp  test_c_ffi_v1.cpp
tests/core/: README.md  fuzz_protocol_codec.cpp  test_parser_resilience.cpp  test_protocol_corruption.cpp  test_target_selector.cpp
tests/ffi/: README.md  test_c_ffi_loader.py
tests/integration/dual_host/: README.md
tests/integration/single_host/: README.md
tests/network/: README.md
tests/perf/: README.md
tests/runtime/: README.md  test_authority_edges.cpp  test_authority_status.cpp  test_authority_target_partition.cpp  test_broadcast_policy.cpp  test_bulk_channel_runtime.cpp  test_capability_negotiation.cpp  test_command_result_edges.cpp  test_external_command_handling.cpp  test_formation_task_runtime.cpp  test_qos_runtime.cpp  test_remote_reconnect.cpp  test_runtime_restart.cpp  test_runtime_stopped_errors.cpp  test_runtime_ttl_freshness.cpp  test_runtime_version_rejection.cpp  test_semantic_payload_policy.cpp  test_session_lifecycle.cpp  test_state_plane_semantics.cpp  test_trajectory_chunk_runtime.cpp
tests/security/: README.md  test_routing_and_source_validation.cpp  test_security_tags.cpp  test_session_security.cpp
tests/soak/: README.md
tests/transport/: README.md  test_tcp_resilience.cpp
tools/: build_fast.py  check_clang_format.sh  check_codestyle.sh  check_core_maxline.sh  render_protocol_diagrams.sh  replay_capture.py  run_clang_format.sh  run_clang_tidy.sh
tools/bindings/: build_python_wheel.sh  build_rust_bindings.sh  python_air_2gcs_2uav.py  python_air_competition.py  python_air_dual_uav.py  python_air_recovery.py  python_air_restart.py  python_air_roundtrip.py  python_ground_2gcs_2uav.py  python_ground_authority_expiry_recovery.py  python_ground_competition.py  python_ground_dual_uav.py  python_ground_roundtrip.py  run_all.sh  run_interop_matrix.py
tools/testing/: README.md
tools/testing/dual_host/: bootstrap_host.sh  collect_logs.sh  deploy_artifacts.sh  hosts.example.yaml  office_wifi_lab.yaml  prepare_hosts.sh  run_suite.py  sync-excludes.txt  sync_repo.sh
tools/testing/netem/: apply_profile.sh  clear_profile.sh
tools/testing/perf/: run_perf_suite.py
tools/testing/report/: render_summary.py
(+32 files in other folders)
